# homu

./: .gitignore  Cargo.toml  justfile
homu/: main.py  parse_issue_comment.py
src/: cli.rs  config.rs  hardcoded.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
