[package]
name = "homu"
version = "0.1.0"
edition = "2021"
description = "A bot that integrates with GitHub and your favorite continuous integration service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Read TOML config files
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
# GitHub api
octocrab = "0.17"
# SQLite
#rusqlite = { version = "0.28", features = ["bundled"] }
diesel = { version = "2", default-features = false, features = ["sqlite"] }
# ASYNC runner
tokio = { version = "1", features = ["rt"] }
# cli
clap = { version = "3.2", features = ["cargo"] }
# logging
env_logger = "0.9"
log = "0.4"
#once_cell = "1"
regex = "1.6"
once_cell = "1"