[package]
name = "homu"
version = "0.1.0"
edition = "2021"
description = "A bot that integrates with GitHub and your favorite continuous integration service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Read config files
serde = { version = "1", features = ["derive"] }
toml = "0.5"
serde_json = "1"
# GitHub api
octocrab = "0.17"
# SQLite
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "time" ] }
time = "0.3"
# ASYNC runner
tokio = { version = "1", features = ["full"] }
# cli
clap = { version = "3.2", features = ["cargo"] }
# logging
env_logger = "0.9"
log = "0.4"
regex = "1"
once_cell = "1"

# Server
[dependencies.tera]
version = "1.3.1"
default-features = false